# mixer

./: .clang-format  .gitignore  CMakeLists.txt  CODING_GUIDELINES.md  README.md  main.cpp  mainwindow.h  resources.qrc
Application/: editmodes.h  historymanager.cpp  historymanager.h  rendermodes.h  selectionmanager.cpp  selectionmanager.h  toolmanager.cpp  toolmanager.h  toolmodes.h
Application/Commands/: addmeshcommand.h  deletemeshcommand.h  deletemeshescommand.h
Application/History/: command.h  deletemeshcommand.h  deletemeshescommand.h
Application/Tools/: cameratool.cpp  cameratool.h  selecttool.cpp  selecttool.h  tool.h
ApplicationState/: toolmanager.h
Core/: mesh.cpp  mesh.h  plane.h  ray.h  scenecontroller.cpp  scenecontroller.h
Core/Geometry/: intersection.cpp  intersection.h  primitives.cpp  primitives.h
Renderer/: camera.cpp  camera.h  grid.cpp  grid.h  meshgl.cpp  meshgl.h  renderer.cpp  renderer.h  selectionrectangle.cpp  selectionrectangle.h  shader.cpp  shader.h
Renderer/Shaders/: flatVertex.glsl  fragment.glsl  gridFragment.glsl  gridVertex.glsl  outlineFragment.glsl  outlineVertex.glsl  pointsFragment.glsl  pointsVertex.glsl  renderedFragment.glsl  selectionRectangleFragment.glsl  selectionRectangleVertex.glsl  vertex.glsl  wireframeFragment.glsl  wireframeVertex.glsl
UI/: mainwindow.cpp  mainwindow.h
UI/Widgets/: glwidget.cpp  glwidget.h  lefttoolbar.cpp  lefttoolbar.h  menubar.cpp  menubar.h  rightsidebar.cpp  rightsidebar.h  toolbar.cpp  toolbar.h  toptoolbar.cpp  toptoolbar.h
tests/: CMakeLists.txt  basictest.cpp  basictest.h  main.cpp
tests/Application/: test_historymanager.cpp
tests/Core/: test_scenecontroller.cpp
